# ROB701

Lab1/camera_and_image/: CMakeLists.txt
Lab1/camera_and_image/calibration/: incalib_chess.py
Lab1/camera_and_image/calibration/pycalib/ipynb/: excalib_chess.ipynb  incalib_chess.ipynb
Lab1/camera_and_image/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
Lab1/camera_and_image/rgbd/: joinMap.cpp
Lab1/programming_basics/: CMakeLists.txt  libHelloSLAM.h
Lab1/use_eigen/: CMakeLists.txt
Lab1/use_eigen/examples/: plotTrajectory.cpp
Lab1/use_eigen/useEigen/: eigenMatrix.cpp
Lab1/use_eigen/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
Lab1/use_eigen/visualizeGeometry/: CMakeLists.txt
Lab2/feature_extraction/: CMakeLists.txt  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
Lab2/optical_flow/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
Lab2/stereovision/: CMakeLists.txt
Lab2/stereovision/stereo/: stereoVision.cpp
